--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-image: url('felix.jpg'); /* Add your image filename here */
+            background-image: url('felix.png'); /* Add your image filename here */
             background-repeat: repeat; /* Set the background to repeat */
             text-align: center;
             padding: 100px;
