--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 </head>
 <body>
     <h1>Hello Felix Fabiansky!</h1>
+        <img src="felix.png" alt="Felix Image" style="max-width: 100%; height: auto; margin: 20px;">
+
     <div class "button-container">
         <a href="game.html" class="button">Play Game</a>
         <a href="calc.html" class="button">Calculator</a>
